welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Boolean(false) does not take parameters
	def vuBiscuit():Boolean=false {
                                      ^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
}
^