welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	def vuBiscuit():Boolean=false {
		if(vuBiscuit==false){
  	return false; 	
	} else{
		return true ;
  } 
	}		
}
